<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nVSn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signup_header">Create your personal accout</string>
    <string name="signup_input_email">Email address</string>
    <string name="signup_input_password">Password</string>
    <string name="signup_input_password_confirm">Confirm your password</string>
    <string name="signup_button">signup</string>
    <string name="logout_button">logout</string>
    <string name="signin_header">Sign in</string>
    <string name="signin_button">sign in</string>
    <string name="error">Error</string>

</resources>
